Atualiza footer com contato Campinas e email

--- a/public/index.html
+++ b/public/index.html
@@ -343,12 +343,12 @@
       <div class="footer-col">
         <h4>Contato</h4>
         <a href="#" id="footer-wpp">💬 WhatsApp</a>
-        <a href="#">📍 São Paulo, SP</a>
+        <a href="#">📍 Campinas, SP</a>
         <a href="#">📧 contato@ghiraldelli.com.br</a>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 <span>Ghiraldelli Imobiliária</span>. Todos os direitos reservados.</p>
+      <p>&copy; 2026 <span>Ghiraldelli Imobiliária</span>. Todos os direitos reservados.</p>
     </div>
   </div>
 </footer>
